# NASimJax

./: .gitignore  LICENSE  README.md  THIRD_PARTY_NOTICES.md  mkdocs.yml  pyproject.toml
.github/workflows/: release.yml
agents/: ppo.py  ppo_dr_masked_multi_eval.py  ppo_masked.py  ppo_plr_accel_masked_multi_eval.py  ppo_wandb.py  pqn_dr_masked_epsgreedy_multi_eval.py  wrappers.py
agents/config/: config.yaml  config_ued.yaml
agents/config/alg/: ppo.yaml  ppo_masked.yaml  ppo_masking_final.yaml  pqn_dr_masked_epsgreedy.yaml
agents/config/envs/: 16-hosts-gen.yaml  26-hosts-gen.yaml  40-hosts-gen.yaml  medium-multi-site.yaml  medium-single-site.yaml  medium.yaml  small-honeypot.yaml  small-linear.yaml  small.yaml  tiny-hard.yaml  tiny-small.yaml  tiny.yaml
agents/config/ued/: accel.yaml  plr.yaml
docs/: index.md
docs/envs/: action.md  common.md  environment.md  environment_base.md  gen_env_pool.md  generated_environment.md  host_vector_batched.md  mutators.md  network_generator.md  observation_function.md  overview.md  renderer.md  transition_logic.md  utils.md  wrappers.md
nasimjax/envs/: __init__.py  action.py  common.py  environment.py  environment_base.py  gen_env_pool.py  generated_environment.py  host_vector_batched.py  level_sampler.py  mutators.py  network_generator.py  observation_function.py  renderer.py  transition_logic.py  utils.py  wrappers.py
nasimjax/scenarios/: __init__.py  host.py  loader.py  scenario.py  utils.py
nasimjax/scenarios/benchmark/: __init__.py  generated.py  medium-multi-site.yaml  medium-single-site.yaml  medium.yaml  small-honeypot.yaml  small-linear.yaml  small.yaml  tiny-hard.yaml  tiny-small.yaml  tiny.yaml
